<resources>
    <string name="app_name" translatable="false">OpenFashion</string>
    <string name="enter_6_code_mail">6‑значный код</string>
    <string name="confirm_code">Подтвердить код</string>
    <string name="enter_the_code_from_the_email">Введите код из письма</string>
    <string name="enter_the_PIN_code">Введите PIN‑код</string>
    <string name="PIN_code_4_digits">PIN‑код (4 цифры)</string>
    <string name="confirmation">Подтвердить</string>
    <string name="data_filling">Заполнение данных</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="Address">Адрес</string>
    <string name="Phone">Телефон</string>
    <string name="Continue">Продолжить</string>
    <string name="Account_Login">Вход в аккаунт</string>
    <string name="email">Адрес электронной почты</string>
    <string name="Password">Пароль</string>
    <string name="Sign_in">Войти</string>
    <string name="Sign_in_by_mail">Войти по почте</string>
    <string name="Forgot_your_password">Забыли пароль?</string>
    <string name="No_account">Нет аккаунта?</string>
    <string name="Registration">Регистрация</string>
    <string name="Next">Далее</string>
    <string name="Password_recovery">Восстановление пароля</string>
    <string name="Send_code">Отправить код</string>
    <string name="New_password">Новый пароль</string>
    <string name="Confirm_password">Подтвердите пароль</string>
    <string name="Change_password">Сменить пароль</string>
    <string name="Sign_up">Зарегистрироваться</string>
    <string name="Incorrect_email_format">Неверный формат email</string>
    <string name="Incorrect_password_format">Неверный формат пароля</string>
    <string name="Parse_Error">Ошибка парсинга: </string>
    <string name="Invalid_server_response">Неверный ответ сервера</string>
    <string name="Error__">Ошибка: </string>
    <string name="Enter_6_digits">Введите 6 цифр</string>
    <string name="Login_by_email">Вход по email</string>
    <string name="Setting_the_PIN_code">Установка PIN-кода</string>
    <string name="Enter_4_digits">Введите 4 цифры</string>
    <string name="Enter_again">Введите ещё раз.</string>
    <string name="The_PIN_codes_do_not_match">PIN-коды не совпадают.</string>
    <string name="Invalid_PIN_Attempts_remaining">Неверный PIN‑код.\nОсталось попыток: </string>
    <string name="The_passwords_dont_match">Пароли не совпадают</string>
    <string name="Back">Назад</string>
    <string name="Check_your_email_and_log_in_to_your_account">На указанную почту отправлено сообщение со ссылкой для активации аккаунта. Перейдите по ссылке и войдите в свой аккаунт.</string>
    <string name="Incorrect_name_format">Неверный формат имени</string>
    <string name="Incorrect_address_format">Неверный формат адреса</string>
    <string name="Incorrect_phone_format">Неверный формат телефона</string>
    <string name="Network_check">Проверка сети…</string>
    <string name="No_internet">Нет интернета</string>
    <string name="Checking_server_availability">Проверка доступности сервера…</string>
    <string name="Server_unavailable">Сервер недоступен</string>
    <string name="Data_Loading">Загрузка данных…</string>
    <string name="Data_loading_error">Ошибка загрузки данных</string>
    <string name="Checking_in_on_the_session">Проверка сессии…</string>
    <string name="Session_error">Ошибка сессии</string>
    <string name="Token_update_error">Ошибка обновления токена</string>
    <string name="Repeat">Повторить</string>
    <string name="Re_checking">Повторная проверка…</string>
    <string name="Enter_the_phone_number">Введите номер телефона</string>
    <string name="Enter_your_email_address">Введите адрес электронной почты</string>
    <string name="Enter_your_user_name">Введите имя пользователя</string>
    <string name="Enter_password">Введите пароль</string>
    <string name="The_username_must_be_">Имя пользователя должно содержать 3–20 символов</string>
    <string name="Log_out_of_the_account">Выйти из аккаунта</string>
    <string name="register_to_speed_up_the_ncheckout_process_and_manage_nyour_order">Зарегистрируйтесь, чтобы ускорить процесс оформления заказа и управления ваш заказ</string>
    <string name="new_to">Вы новенький?</string>
    <string name="register_terms">
        Нажимая кнопку «Зарегистрироваться», вы соглашаетесь с нашим
        <a href="https://hufhfmqquczxpxpmtzbf.supabase.co/storage/v1/object/public/kall//terms">Техническими условиями</a> и
        <a href="https://hufhfmqquczxpxpmtzbf.supabase.co/storage/v1/object/public/kall//privacy">политикой конфиденциальности</a>.
    </string>
    <string name="sign_in_to_speed_up_the_checkout_nprocess_and_manage_your_orders">Войдите в систему, чтобы ускорить процесс оформления заказа и управлять своими заказами</string>
    <string name="have_an_account">У вас есть аккаунт?</string>
    <string name="or">Или</string>
    <string name="Start">Начать</string>
    <string name="show_all">Показать все</string>
    <string name="new_arrival">Новое поступление</string>
    <string name="man">мужская</string>
    <string name="female">женская</string>
    <string name="unisex">унисекс</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="View_all">Посмотреть все</string>
    <string name="clothes">Одежда</string>
    <string name="order">Заказ</string>
    <string name="basket">Корзина</string>
    <string name="apply">применить</string>
    <string name="sucress">Успех</string>
    <string name="Apparel">Предметов одежды</string>
    <string name="Checkout">оформление заказа</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="remove_basket">Убрать с корзины</string>
    <string name="Loading">Загрузка</string>
    <string name="Your_shopping_cart_is_empty">Ваша корзина пуста</string>
    <string name="est_total">Итоговая сумма</string>
</resources>