<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/paddingHorizontalMainLayout"
    android:paddingVertical="@dimen/paddingVerticalMainLayout">

    <TextView
        android:id="@+id/pinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile"
        android:textAppearance="@style/TextAppearance.OpenFashion.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_header"
        app:layout_constraintTop_toTopOf="@+id/profileRoot" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="110dp"
        android:layout_height="15dp"
        android:background="@drawable/s"
        android:backgroundTint="@color/Placeholder"
        app:layout_constraintTop_toBottomOf="@+id/pinTitle"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/textViewId"
        style="@style/TextAppearance.OpenFashion.Body.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.OpenFashion.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/Widget.OpenFashion.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Имя пользователя -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.OpenFashion.TextInputLayout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.OpenFashion.TextInputEditText"
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <!-- Имя пользователя -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameInputLayout"
            style="@style/Widget.OpenFashion.TextInputLayout"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.OpenFashion.TextInputEditText"
                android:id="@+id/lastnameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Address -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpAddressLayout"
        style="@style/Widget.OpenFashion.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Address"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OpenFashion.TextInputEditText"
            android:id="@+id/signUpAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPhoneLayout"
        style="@style/Widget.OpenFashion.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        app:layout_constraintTop_toBottomOf="@id/signUpAddressLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OpenFashion.TextInputEditText"
            android:id="@+id/signUpPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        style="@style/Widget.OpenFashion.TransparentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Log_out_of_the_account"
        android:textColor="@color/colorError"
        app:iconTint="@color/colorError"
        app:layout_constraintBottom_toTopOf="@+id/buttonApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApply"
        style="@style/Widget.OpenFashion.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/errorProgress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/signUpPhoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Текст ошибки -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.OpenFashion.Body.Medium"
        app:layout_constraintTop_toBottomOf="@id/errorProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>