<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUpRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/paddingHorizontalMainLayout"
    android:paddingVertical="@dimen/paddingVerticalMainLayout"
    android:background="@color/white">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/data_filling"
        android:textAppearance="@style/TextAppearance.OpenFashion.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_header"
        app:layout_constraintTop_toTopOf="@+id/signUpRoot"/>

    <!-- Имя пользователя -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        style="@style/Widget.OpenFashion.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OpenFashion.TextInputEditText"
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Address -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpAddressLayout"
        style="@style/Widget.OpenFashion.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Address"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OpenFashion.TextInputEditText"
            android:id="@+id/signUpAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPhoneLayout"
        style="@style/Widget.OpenFashion.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        app:layout_constraintTop_toBottomOf="@id/signUpAddressLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.OpenFashion.TextInputEditText"
            android:id="@+id/signUpPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка “Продолжить” -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        style="@style/Widget.OpenFashion.Button"
        app:layout_constraintTop_toBottomOf="@id/signUpPhoneLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/signUpProgress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Текст ошибки -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUpErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError"
        android:visibility="gone"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.OpenFashion.Body.Medium"
        app:layout_constraintTop_toBottomOf="@id/signUpProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
